# auth-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  OIDC.md  README.md  TECHNICAL.md  alembic.ini  authengine_openapi.json  docker-compose.yml  openapi.json  pyproject.toml
.github/workflow/: 3-release.yml
.github/workflows/: 0-ci.yml  1-build-push.yml  1-tag.yml  2-build-push.yml  3-release.yml  4-deploy.yml
alembic/: env.py
alembic/versions/: 03efaee5723b_add_sms_model.py  0ae45168ff18_add_oidcclient.py  0ebc1d2aa8d5_change_avatar_url_string_to_text.py  3bfcc32c83dd_add_rbac_models_and_migrate_user_id_to_.py  4bafd51bb520_add_mfa_related_column.py  6614a77fe7c5_change_scope_to_enum_rolescope.py  7331f6b95d19_added_tenant_description_in_tentorm.py  a48f25e886fa_include_utc_in_date_time.py  b7c2d4e6f8a0_add_tenant_auth_config_and_social_providers.py  c39c5c67e84c_add_tenant_email_config.py  c9d3e5f7a1b2_add_webauthn_credentials.py  cc790b58b43a_initial_migration_create_users_table.py  e0f528e68aa9_add_all_tables.py  eb4efa51615c_add_level_to_roles.py  ec0322df5faf_add_tenants_type.py
src/auth_engine/: cli.py  main.py
src/auth_engine/api/: auth_deps.py  deps.py  rbac.py
src/auth_engine/auth_strategies/: base.py  constants.py  email_password.py  magic_link.py  totp.py  webauthn.py
src/auth_engine/core/: __init__.py  bootstrap.py  config.py  exceptions.py  health.py  mongodb.py  oidc_crypto.py  postgres.py  rbac_seed.py  redis.py  security.py  templates.py
src/auth_engine/models/: __init__.py  email_config.py  oidc_client.py  (+12 more)
(+126 files in other folders)
